add production bundle.min.js to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
 
 <script type="text/javascript" src="dist/js/bundle.js"></script>
+
+<!--add this line for production use: -->
+<!--<script type="text/javascript" src="dist/js/bundle.min.js"></script>-->
+
 </body>
 </html>
