--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <h1>Base Project</h1>
 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+<div class="wrapper">
+    <p>Hey Wrapper</p>
 
+    <div>test second div</div>
+</div>
+
+<button>test button</button>
 <script type="text/javascript" src="dist/js/bundle.js"></script>
 
 <!--add this line for production use: -->
