--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>BaseProject gulp</title>
@@ -18,8 +18,6 @@
 <button>test button</button>
 <script type="text/javascript" src="dist/js/bundle.js"></script>
 
-<!--add this line for production use: -->
-<!--<script type="text/javascript" src="dist/js/bundle.min.js"></script>-->
 
 </body>
 </html>
